--- a/SendBirdUIKit-Sample/Base.lproj/Main.storyboard
+++ b/SendBirdUIKit-Sample/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="haP-hb-iAt">
-                                        <rect key="frame" x="0.0" y="373" width="366" height="360"/>
+                                        <rect key="frame" x="0.0" y="373" width="366" height="296"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCl-Gv-uvB" userLabel="ThemeSwitch">
                                                 <rect key="frame" x="0.0" y="0.0" width="366" height="31"/>
@@ -170,13 +170,47 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dDj-TR-Rl9">
-                                                <rect key="frame" x="0.0" y="119" width="366" height="24"/>
+                                                <rect key="frame" x="0.0" y="119" width="366" height="16"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="24" id="tlA-7d-hrS"/>
+                                                    <constraint firstAttribute="height" constant="16" id="tlA-7d-hrS"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Gy-jB-suc" userLabel="Custom samples">
+                                                <rect key="frame" x="0.0" y="135" width="366" height="48"/>
+                                                <color key="backgroundColor" red="0.0" green="0.56862745098039214" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="48" id="1bS-6U-vgD"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Custom Samples">
+                                                    <color key="titleColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6L-h1-vy4"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sF4-BW-bNO">
+                                                <rect key="frame" x="0.0" y="183" width="366" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="32" id="cty-oT-cIF"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOq-LT-haT" userLabel="Separator">
+                                                <rect key="frame" x="0.0" y="215" width="366" height="1"/>
+                                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="SaU-3d-KM0"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yMO-qR-DjF">
+                                                <rect key="frame" x="0.0" y="216" width="366" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="32" id="U2t-oT-LT1"/>
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DAG-VH-CgB">
-                                                <rect key="frame" x="0.0" y="143" width="366" height="48"/>
+                                                <rect key="frame" x="0.0" y="248" width="366" height="48"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="48" id="PQw-O2-saY"/>
                                                 </constraints>
@@ -186,39 +220,6 @@
                                                 </state>
                                                 <connections>
                                                     <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="71c-V3-pBn"/>
-                                                </connections>
-                                            </button>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sF4-BW-bNO">
-                                                <rect key="frame" x="0.0" y="191" width="366" height="60"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="cty-oT-cIF"/>
-                                                </constraints>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOq-LT-haT" userLabel="Separator">
-                                                <rect key="frame" x="0.0" y="251" width="366" height="1"/>
-                                                <color key="backgroundColor" red="0.42311713099999998" green="0.2854237556" blue="0.76474624869999996" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="1" id="SaU-3d-KM0"/>
-                                                </constraints>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yMO-qR-DjF">
-                                                <rect key="frame" x="0.0" y="252" width="366" height="60"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="U2t-oT-LT1"/>
-                                                </constraints>
-                                            </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Gy-jB-suc" userLabel="Custom samples">
-                                                <rect key="frame" x="0.0" y="312" width="366" height="48"/>
-                                                <color key="backgroundColor" red="0.46666666670000001" green="0.33725490200000002" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="48" id="1bS-6U-vgD"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                <state key="normal" title="Custom Samples">
-                                                    <color key="titleColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6L-h1-vy4"/>
                                                 </connections>
                                             </button>
                                         </subviews>
