--- a/SendBirdUIKit-Sample/Base.lproj/Main.storyboard
+++ b/SendBirdUIKit-Sample/Base.lproj/Main.storyboard
@@ -175,19 +175,17 @@
                                                     <constraint firstAttribute="height" constant="16" id="tlA-7d-hrS"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Gy-jB-suc" userLabel="Custom samples">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DAG-VH-CgB">
                                                 <rect key="frame" x="0.0" y="135" width="366" height="48"/>
-                                                <color key="backgroundColor" red="0.0" green="0.56862745098039214" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="48" id="1bS-6U-vgD"/>
+                                                    <constraint firstAttribute="height" constant="48" id="PQw-O2-saY"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <state key="normal" title="Custom Samples">
-                                                    <color key="titleColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" title="Sign out">
+                                                    <color key="titleColor" red="0.46666666670000001" green="0.33725490200000002" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6L-h1-vy4"/>
+                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="71c-V3-pBn"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sF4-BW-bNO">
@@ -209,17 +207,19 @@
                                                     <constraint firstAttribute="height" constant="32" id="U2t-oT-LT1"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DAG-VH-CgB">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Gy-jB-suc" userLabel="Custom samples">
                                                 <rect key="frame" x="0.0" y="248" width="366" height="48"/>
+                                                <color key="backgroundColor" red="0.0" green="0.56862745098039214" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="48" id="PQw-O2-saY"/>
+                                                    <constraint firstAttribute="height" constant="48" id="1bS-6U-vgD"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                <state key="normal" title="Sign out">
-                                                    <color key="titleColor" red="0.46666666670000001" green="0.33725490200000002" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Custom Samples">
+                                                    <color key="titleColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="71c-V3-pBn"/>
+                                                    <action selector="onTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6L-h1-vy4"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -257,6 +257,7 @@
                         <outlet property="loadingIndicator" destination="xdO-or-Wxj" id="PGm-HO-GQ0"/>
                         <outlet property="logoStackView" destination="FKp-mJ-WtR" id="wW6-qo-tLU"/>
                         <outlet property="nicknameTextField" destination="OQA-jB-aDU" id="hHq-v2-sQa"/>
+                        <outlet property="separatorLine" destination="oOq-LT-haT" id="jIV-5k-aRm"/>
                         <outlet property="signInButton" destination="zdE-Rf-CSx" id="Hvy-XB-i9x"/>
                         <outlet property="signInStackView" destination="ZqZ-J1-gla" id="a0w-J8-5Um"/>
                         <outlet property="signOutButton" destination="DAG-VH-CgB" id="cAV-WN-GD7"/>
